fix alignment of custom-tag tags even more

--- a/style.less
+++ b/style.less
@@ -234,6 +234,7 @@
 				}
 
 				.stac--custom {
+					border: 0.1px solid transparent;
 					transition: 200ms;
 					position: relative;
 					&:hover {
@@ -276,7 +277,7 @@
 						&::after {
 							content: "</"attr(data-tag)">";
 							position: absolute;
-							bottom: 1em;
+							bottom: 0;
 							right: -0.4em;
 							font-size: 0.6em;
 							line-height: 1;
